// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package protos;

import "google/protobuf/empty.proto";

message LimitOrderBook {
  uint64 update_id = 1;
  Bids bids = 2;
  Asks asks = 3;
}

message Bids {
  repeated PriceAndQuantity bids = 1;
}

message Asks {
  repeated PriceAndQuantity asks = 1;
}

message PriceAndQuantity {
  double price = 1;
  double quantity = 2;
}

service LimitOrderBookService {
  rpc GetLimitOrderBook (google.protobuf.Empty) returns (LimitOrderBook);
}